fix:too much css variance

--- a/UnifiedMetaForm/src/app/metaform/ui/metaform-display.component.css
+++ b/UnifiedMetaForm/src/app/metaform/ui/metaform-display.component.css
@@ -11,7 +11,7 @@
 
 .footnote {
     font-size: 10pt;
-    margin: 0.5rem 0.25rem;
+    margin: 0.75rem 0.25rem;
     color: rgb(18, 18, 53);
     font-weight: 600;
     text-align: center;
@@ -33,11 +33,11 @@ label.caption {
 }
 
 .errorMessage {
-    margin-top: 0.25rem;
+    margin: 0.25rem 0;
     background-color: rgb(156, 42, 42);
     color: white;
-    width: calc(100% - 1.4rem);
-    padding: 0.2rem 0.5rem;
+    width: calc(100% - 1rem + 4px);
+    padding: 0.5rem 0.25rem;
     border-radius: 5px;
 }
 
@@ -67,6 +67,7 @@ label.caption {
     padding: 0.55rem 1rem;
     background-color: rgb(42, 42, 116);
     border:  rgb(42, 42, 116);
+    border-width: 1px;
     border-radius: 5px;
     color: white;
 }
