--- a/UnifiedMetaForm/src/app/metaform/ui/mf.components.css
+++ b/UnifiedMetaForm/src/app/metaform/ui/mf.components.css
@@ -1,12 +1,9 @@
 .mf-control-item {
     width: calc(100% - 1rem);   
-    border: 1px solid #bbbbbb;
-    border-radius: 5px;
-    padding: 0.5rem 0.25rem;
 }
 
 input.error, input.error, select.error {
-    border: 1px solid red;
+    border-color:  red;
 }
 
 input[type=number]::-webkit-outer-spin-button,
@@ -19,29 +16,34 @@ input[type=number] {
     -moz-appearance:textfield;
 }
 
+input, select, option, textarea, .mf-option-item { 
+    width: calc(100% - 0.25rem);    
+    padding: 0.25rem;
+    border-radius: 5px;
+    border-style: solid;
+    border-width: 1px;
+    min-height: 1.25rem;
+    padding: 0.5rem 0.25rem;
+    border-color: #bbbbbb;
+}
 /* Option Components */
 
 .mf-option-item {
-    width: calc(100% - 0.25rem);
     background-color: white;
     color: black;
-    border: 1px solid rgb(0.4, 0.4, 0.5);
-    border-radius: 5px;
-    padding: 0.5rem 0.25rem;
     text-align: center;
-    margin-bottom: 0.75rem;
+    margin-bottom: 0.5rem;
+}
+
+.mf-control-item-multi {
+    width: calc(100% - 1rem);
+    height: 7rem;
 }
 
 .opt-selected {
     background-color: rgb(42, 42, 116);
-    border: 1px solid rgb(42, 42, 116);
+    border-color:  rgb(42, 42, 116);
     color: white;   
-}
-
-input, select, option { 
-    width: calc(100% - 0.25rem);    
-    padding: 0.25rem;
-    border-radius: 5px;
 }
 
 /* Date Component */
@@ -54,7 +56,7 @@ input, select, option {
 
 .shortdate {
     display: grid;
-    column-gap: 0rem;
+    column-gap: 0.25rem;
     grid-template-columns: 12rem 5rem;
 }
 
@@ -104,9 +106,7 @@ input, select, option {
 select.idd {
     max-width: calc(100% - 25% - 1.25rem);
     border-radius: 5px;
-    min-height: 1.25rem;
     margin-right: 0.25rem;
-    padding: 0.5rem 0.25rem;
 }
 
 input.telnum {
